# ancientgreek-syntactic-embeddings

./: .gitignore  README.md  pyproject.toml
scripts/exploration/: most_similar.py
scripts/preprocess/: mergetrees.py  xml-to-parenth-agdt.py  xml-to-parenth-proiel.py
scripts/training/: train.py
