[tool.poetry]
name = "agwordemb"
version = "0.1.0"
description = "Train syntactic word embeddings from Ancient Greek treebanks (PROIEL or AGDT annotation schemes)."
authors = ["Nilo Pedrazzini"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.1"
nltk = "^3.7"
pandas = "^1.5.0"
networkx = "^2.8.7"
node2vec = "^0.4.6"
gensim = "^4.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
